# server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy_image.yml
migrations/2023-07-13-201727_updated_at_function/: down.sql
migrations/2023-07-13-202410_base_objects/: down.sql  up.sql
server/: .dockerignore  Cargo.toml  Dockerfile
server/.github/workflows/: prod.yml
server/migrations/2023-07-13-201727_updated_at_function/: up.sql
server/migrations/2023-07-13-202410_base_objects/: down.sql  up.sql
server/src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  services.rs
server/src/models/: designs.rs  projects.rs  repositories.rs  users.rs
server/src/routes/: designs.rs  projects.rs  repositories.rs  users.rs
server/src/services/: github.rs
src/: apidoc.rs  auth.rs  errors.rs  lib.rs  models.rs  routes.rs  schema.rs  services.rs
src/models/: designs.rs  projects.rs  repositories.rs  users.rs
src/routes/: auth.rs  designs.rs  projects.rs  repositories.rs  users.rs
src/routes/auth/: github.rs
src/services/: encrypt.rs  github.rs
