[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["enwilco"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
mime = "0.3.17"

serde = "1.0.171"
serde_json = "1.0.103"
serde_derive = "1.0.171"
serde_urlencoded = "0.7.1"

env_logger = "0.10.0"
futures = "0.3.28"
uuid = { version = "1.3", features = ["v4", "serde"]}
chrono = { version = "0.4.24", features = ["serde"]}
r2d2 = "0.8.10"
alcoholic_jwt = "4091.0.0"
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.4.0"

ring = "0.16.20"
hex = "0.4.3"

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"  