[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["enwilco"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"

env_logger = "0.10.0"
futures = "0.3.28"
serde = "1.0.171"
serde_json = "1.0.103"
serde_derive = "1.0.171"
uuid = { version = "1.3", features = ["v4", "serde"]}
chrono = { version = "0.4.24", features = ["serde"]}
r2d2 = "0.8.10"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = "4091.0.0"
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.4.0"

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
dotenv = "0.15.0"  